--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   letter-spacing: 10px;
 }
 .border-theme{
-  border-color: chartreuse;
+  border-color: rgb(147, 226, 68);
 }
 .white{
   color: whitesmoke;
